<resources>
    <string name="app_name">Patrol</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="state_normal">Normal</string>
    <string name="state_abnormal">Abnormal</string>
    <string name="text_site">Site: </string>
    <string name="text_state">State: </string>
    <string name="text_remarks">Remarks: </string>
    <string name="text_capture_picture">Capture picture: </string>
    <string name="text_report_upload">Report upload</string>
    <string name="site_tongniu">Bronze Ox</string>
    <string name="site_paiyundian_qfxr">Cloud Dispelling Hall</string>
    <string name="site_wenchangge">Wenchang Pavilion</string>
    <string name="site_unknown">Unknown site</string>
    <string name="text_start_report">Report</string>
    <string name="text_submit">Submit</string>
    <string name="text_site_distance_meter">Distance: %1$d meters</string>
    <string name="text_site_distance_km">Distance: %1$f km</string>
    <string name="text_report_save">Report save</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="ask_if_exit">Do you want to exit?</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cancel">Cancel</string>
    <string name="title_activity_saved_items">SavedItemsActivity</string>
</resources>
